--- a/views/mylasttrips.ejs
+++ b/views/mylasttrips.ejs
@@ -13,11 +13,11 @@
     <div class="home container-fluid">
         <div class="col-12 col-lg-12" id="tableauticket">
             <div class="row">
-                <div class="col-12 col-lg-12" >
+                <div class="col-12 col-lg-12">
 
              <table class="table table-light">
                 <thead>
-                    <h5>My tickets</h5>
+                    <h5 class="titletable">My Last Trips</h5>
                   <tr>
                     <th scope="col">Date</th>
                     <th scope="col">Journey</th>
@@ -32,17 +32,21 @@
                     <td>15:00 pm</td>
                     <td>93€</td>
                   </tr>
+                  <tr>
+                    <th scope="row">02/08/2019</th>
+                    <td>Paris/Bordeaux</td>
+                    <td>19:00 pm</td>
+                    <td>125€</td>
+                  </tr>
                   <tbody>
                 </table>
-                <button type="button" type="submit" class="btn btn-danger" href="./homepage">Home</button>
+                <a href="/homepage"><button type="button" type="submit" class="btn btn-danger">Home</button></a>
             </div>
                 </div>
             </div>
         </div>
 
-
-
-
+                    
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
